shadowing/error.log
   Compiling shadowing v0.1.0 (/home/haha/Rust/shadowing)
error[E0308]: mismatched types
  --> src/main.rs:16:14
   |
15 |     let mut spaces = "   ";
   |                      ----- expected due to this value
16 |     spaces = spaces.len();//ERROR: cannot change the type of mut variable
   |              ^^^^^^^^^^^^ expected `&str`, found `usize`

For more information about this error, try `rustc --explain E0308`.
error: could not compile `shadowing` (bin "shadowing") due to 1 previous error
